--- a/src/frontend/templates/shared/footer.html
+++ b/src/frontend/templates/shared/footer.html
@@ -1,17 +1,11 @@
-      <!-- Page Footer -->
-      <footer class="footer">
-        <div class="container">
-            <div class="row mb-2" class="footer-google-inc">© 2020-2023 Google LLC</div>
-            <div class="row mb-3">
-              <small>
-                <b>Cluster: </b>{{ cluster_name }}, <b>Pod: </b>{{ pod_name }}<b>, Zone: </b>{{ pod_zone }}
-              </small>
-            </div>
-            <div class="row mb-3">
-              <small>
-                This website is hosted for demo purposes only. It is not an
-                actual bank. This is not an official Google project.
-              </small>
-            </div>
-        </div>
-      </footer>
+<!-- Page Footer -->
+<footer class="footer">
+  <div class="container">
+    <div class="row mb-2" class="footer-google-inc">© 2020-2023 Yazi Inc</div>
+    <div class="row mb-3">
+      <small>
+        This website is hosted for demo purposes only. Property of Yazi Inc
+      </small>
+    </div>
+  </div>
+</footer>
